--- a/Sources/Tools/Giny.WorldEditor/Components/Roleplay/Npcs/GenericAction.razor
+++ b/Sources/Tools/Giny.WorldEditor/Components/Roleplay/Npcs/GenericAction.razor
@@ -69,6 +69,8 @@
                 return "TitleId";
             case GenericActionEnum.PokefusWish:
                 return "Wish count";
+            case GenericActionEnum.StartQuest:
+                return "Quest Id";
 
         }
 
