--- a/Sources/Tools/Giny.WorldEditor/Components/Roleplay/Dialogs/ModifyReplyDialog.razor
+++ b/Sources/Tools/Giny.WorldEditor/Components/Roleplay/Dialogs/ModifyReplyDialog.razor
@@ -3,6 +3,7 @@
 @using Giny.ORM;
 @using Giny.World.Managers.Generic;
 @using Giny.World.Records.Npcs;
+@using Giny.WorldEditor.Components.Roleplay.Npcs
 <MudDialog>
     <DialogContent>
         <MudTextField TextChanged=OnReplyTextChanged Lines="3" @bind-Value=ReplyText Class="mb-2"></MudTextField>
